feat: api update category
